# free_kick

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
benchmark/: CMakeLists.txt
benchmark/feature_extractor/: CMakeLists.txt  feature_extractor.cpp  feature_extractor.h  helper.h  main.cpp
benchmark/utils/: CMakeLists.txt  main.cpp
cc/: CMakeLists.txt  main.cpp
cc/str/: str_utils.cpp  str_utils.h
cmake/: BuildPython.cmake  ConfigBuildTree.cmake  ConfigCUDA.cmake  ConfigCompiler.cmake  ConfigFaiss.cmake  ConfigMKL.cmake  ConfigOpenCV.cmake  ConfigPython.cmake  ConfigTensorRT.cmake  PrintConfig.cmake
notebooks/: test.py  test_gn.ipynb
python/: CMakeLists.txt
python/example/: CMakeLists.txt  example.cpp
python/notebooks/: faiss_demo1.ipynb  test_detectron2.ipynb  test_gn.ipynb  test_scale_contour.ipynb
python/notebooks/faiss/: faiss_demo1.ipynb
python/scripts/: detectron2_to_wts.py  google_benchmark_demo1.py
samples/: CMakeLists.txt
samples/faiss_sample/: CMakeLists.txt  main.cpp
samples/misc/: CMakeLists.txt  main.cpp
samples/stream/: CMakeLists.txt  main.cpp  widget.cpp  widget.h
src/: CMakeLists.txt  main.cpp
src/cucv/: CMakeLists.txt
src/cucv/plugin/: CMakeLists.txt
src/cucv/plugin/common/: checkMacrosPlugin.cpp  logging.h  plugin.h  serialize.hpp  vfcCommon.h
src/cucv/plugin/group_normalization_plugin/: group_normalization_kernel.cu  group_normalization_plugin.cpp  group_normalization_plugin.h
src/cuda/: CMakeLists.txt
src/cuda/common/: CMakeLists.txt  checkMacrosPlugin.cpp  checkMacrosPlugin.h  dimsHelpers.h  plugin.h
src/cuda/model/: CMakeLists.txt
src/cuda/model/common/: common.hpp  cuda_utils.h
src/cuda/model/rcnn/: CMakeLists.txt  backbone.hpp  rcnn.h
src/cuda/models/: CMakeLists.txt
src/cuda/models/rcnn/: backbone.hpp  rcnn.cpp
src/cuda/plugin/: CMakeLists.txt
src/cuda/plugin/common/: checkMacrosPlugin.h  logging.h  plugin.h
src/cuda/plugin/group_normalization_plugin/: CMakeLists.txt
src/cuda/plugins/: CMakeLists.txt
src/cuda/plugins/group_normalization_plugin/: group_normalization_plugin.cpp  group_normalization_plugin.h
src/utils/: CMakeLists.txt  algo_utils.cpp  algo_utils.h  math_utils.h  str_utils.cpp  str_utils.h
tests/: CMakeLists.txt
tests/cucv_test/: CMakeLists.txt  group_normalization.cpp  utility.h
tests/cuda/: CMakeLists.txt  utility.h  values_test.h
tests/cuda/models/: CMakeLists.txt
tests/cuda/plugin/: CMakeLists.txt  test_group_normalization.cpp
tests/cv/: CMakeLists.txt  test_cv_write.cpp
tests/str/: test_str_utils.cpp
tests/utils/: CMakeLists.txt  test_algo_utils.cpp  test_math_utils.cpp  test_str_utils.cpp
tests/utils_test/: CMakeLists.txt
